--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <h1>Tony's Demo Home</h1>
-  <p>It worked!</p>
-
+  <h1>Trying to find this file hurt my brain</h1>
+  <p>but here i am</p>
+  <p>Love, Jeremy</p>
 </div>
